--- a/css/style.css
+++ b/css/style.css
@@ -24,8 +24,6 @@ header{
     padding: 1rem 2rem;
 }
  .button-white{
-    width: 4rem;
-    height: 2rem;
     background-color: white;
     color: #1d1552;
     border-color: white;
@@ -33,9 +31,46 @@ header{
     border-radius: 3rem;
 }
 .top p{
-    padding-top: 1rem ;
-
+    padding: 1rem 6rem ;
+    
 }
 .top button{
-    margin-top: 0.5rem;
+    margin: 0.5rem 6rem;
+    width: 4rem;
+    height: 2rem;
+    
+}
+ 
+.bottom{
+  text-align: center;
+ color: white;
+ padding: 2rem 0rem 6rem 0rem;
+}
+.bottom h1{
+    font-size: 3rem;
+   
+} 
+.bottom p{
+    padding: 2rem 15rem;
+}
+
+
+
+.bottom button{
+    margin: 0 1rem;
+
+}
+.bottom .button-white{
+    height: 2rem;
+    width: 8rem;
+}
+.button-black{
+    border: 0px;
+    border-radius: 3rem;
+    background-color:#23272a ;
+    color: white;
+}
+.bottom .button-black{
+height: 2rem;
+width: 12rem;
 }
